draft new kernels

--- a/notebooks/mnist.ipynb
+++ b/notebooks/mnist.ipynb
@@ -24,8 +24,7 @@
     "\n",
     "logging.basicConfig(filename='hallgerd.log', level = logging.DEBUG, \n",
     "                    filemode='w', \n",
-    "                        format='%(asctime)s :: %(levelname)s :: %(message)s',\n",
-    ")\n",
+    "                    format='%(asctime)s :: %(levelname)s :: %(message)s')\n",
     "\n",
     "import hallgerd\n",
     "from hallgerd.core import Sequential\n",
